fix gaps between technology items

--- a/style.css
+++ b/style.css
@@ -1244,7 +1244,7 @@ header nav div .menu-bar {
     order: 2;
     flex-grow: 0;
     height: auto;
-    width: 60%;
+    width: 80%;
     padding-top: 0;
     margin-top: 0;
     padding-bottom: 0;
@@ -1275,6 +1275,7 @@ header nav div .menu-bar {
     order: 1;
     flex-grow: 0;
     padding: 4px 12px;
+    margin-right: 12px;
     font-weight: 500;
     font-size: 12px;
     line-height: 16px;
@@ -1291,7 +1292,7 @@ header nav div .menu-bar {
     flex: none;
     order: 2;
     flex-grow: 0;
-    padding: 4px 12px;
+    padding: 4px 12px 4px 12px;
     font-weight: 500;
     font-size: 12px;
     line-height: 16px;
